<resources>
    <string name="app_name">AppPostagens</string>
    <string name="title_comment">Comments</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_num_post">Posts</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_add">Add</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="text_sing_up">Cadastrar-se</string>
    <string name="button_login">Entrar</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Senha</string>
    <string name="hint_sing_up_username">Username</string>
    <string name="hint_sing_up_name">Nome</string>
    <string name="hint_sing_up_email">Email</string>
    <string name="hint_sing_up_password">Crie uma senha</string>
    <string name="button_sing_up">Criar conta</string>
</resources>