<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.FriendProfileFragment">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_friend_profile"
        app:layout_constraintBottom_toTopOf="@+id/cardView"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_image_profile"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_followers"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/textFollowing"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textPosts" />

    <TextView
        android:id="@+id/textPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_num_post"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/textFollowers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView" />

    <TextView
        android:id="@+id/textNumFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFollowing"
        app:layout_constraintEnd_toEndOf="@+id/textFollowing"
        app:layout_constraintStart_toStartOf="@+id/textFollowing" />

    <TextView
        android:id="@+id/textNumFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFollowers"
        app:layout_constraintEnd_toEndOf="@+id/textFollowers"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/textFollowers" />

    <TextView
        android:id="@+id/textNumPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textPosts"
        app:layout_constraintEnd_toEndOf="@+id/textPosts"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/textPosts" />

    <TextView
        android:id="@+id/textFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_following"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textFollowers" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/textNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <GridView
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:numColumns="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/followButtonProfile"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:strokeColor="?attr/android:colorAccent"
        android:text="Seguir"
        android:textColor="?attr/android:textColor"
        app:layout_constraintEnd_toEndOf="@+id/textFollowing"
        app:layout_constraintStart_toStartOf="@+id/textPosts"
        app:layout_constraintTop_toBottomOf="@+id/textFollowers" />
</androidx.constraintlayout.widget.ConstraintLayout>